tests/baselines/reference/nonIterableRestElement2.errors.txt
tests/cases/conformance/es6/destructuring/nonIterableRestElement2.ts(2,1): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/destructuring/nonIterableRestElement2.ts (1 errors) ====
    var c = {};
    [...c] = ["", 0];
    ~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.